Write real world evaluation section

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -313,3 +313,12 @@
   journal      = {GitHub repository},
   howpublished = {\url{https://github.com/Dylancyclone/thesis}}
 }
+
+@misc{BlenderDemoScene,
+  title     = {Blender 3.0},
+  url       = {https://cloud.blender.org/p/gallery/617933e9b7b35ce1e1c01066},
+  journal   = {Blender Cloud},
+  publisher = {Blender Foundation},
+  year      = {2021},
+  month     = {Oct}
+}
